added full stack php project pizzata

--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
                     <a
                         target="_blank"
                         href="assets/Saad_full_stack.pdf"
-                        class="btn px-2 py-1 curve"
-                        >Download Resume</a
-                    >
+                        class="btn px-2 py-1 curve" >Download Resume</a>
                     <button
                         class="btn contact px-2 py-1 curve"
                         onclick="scrollToContact()"
@@ -139,7 +137,7 @@
                     <br />
                     in QUEST nawabshah in 2nd Year.
                 </p>
-                <div class="grid row_about gap-4">
+                <div class="grid row_about gap-2">
                     <div class="box front text-red-500">
                         <span>Frontend</span>
                     </div>
@@ -159,9 +157,12 @@
             <div class="box-happy w-50p">
                 Welcome ! I am happy to know if you are interested to hire me.
                 <br />
-                <a href="#contacts" class="btn btn-sm mt-2 block rounded-6"
-                    >hire me</a
+                <button
+                    onclick="scrollToContact()"
+                    class="btn btn-sm mt-2 block rounded-6"
                 >
+                    hire me
+                </button>
             </div>
             <!-- *****==> BOX ENDS HERE <==*****-->
 
@@ -213,7 +214,7 @@
             <!-- *****==> IMG  SECTION STARTS HERE <==*****-->
             <div class="img flex item-center space-evenly">
                 <div class="center">
-                    <span class="weight-600 heading projects_no"> 430</span>+
+                    <span class="weight-600 heading projects_no"> 430+</span>
                     <p class="letter-spacing">CUPS OF COFFEE</p>
                 </div>
                 <div class="center">
