maded it responsive

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://cdn.tailwindcss.com"></script>
+        <!-- <script src="https://cdn.tailwindcss.com"></script> -->
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/skills.css" />
-        <link rel="stylesheet" href="./css/Util.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -41,6 +40,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <link rel="manifest" href="/site.webmanifest" />
+        <link rel="stylesheet" href="./css/Util.css" />
         <title>Mr Saad | Portfolio</title>
     </head>
     <body>
@@ -118,7 +118,9 @@
                     <a
                         target="_blank"
                         href="assets/Saad_full_stack.pdf"
-                        class="btn px-2 py-1 curve" >Download Resume</a>
+                        class="btn px-2 py-1 curve"
+                        >Download Resume</a
+                    >
                     <button
                         class="btn contact px-2 py-1 curve"
                         onclick="scrollToContact()"
@@ -149,6 +151,9 @@
                     </div>
                     <div class="box design text-blue-700">
                         <span>Designs</span>
+                    </div>
+                    <div class="box deploy text-orange-400">
+                        <span>Deployment</span>
                     </div>
                 </div>
             </div>
@@ -431,7 +436,33 @@
                 <div class="test_grid">
                     <a
                         href="https://www.fiverr.com/mrsajid4522?up_rollout=true"
-                        class="flex box gap-1 item-center text-left"
+                        class="flex client_review box gap-1 item-center text-left"
+                        target="_blank"
+                    >
+                        <img
+                            class="rounded-full mx-auto"
+                            src="images/stefan.jpg"
+                            alt=""
+                            width="70px"
+                            height="70px"
+                        />
+                        <div class="">
+                            <div class="flex space-between item-center">
+                                <span  class="text-white">Stefanescuf</span>
+                                <div class="rating main-color small-font">
+                                    &starf; &starf; &starf; &starf; &starf;
+                                </div>
+                            </div>
+                            <p>
+                                Very happy with the work provided! Fast delivery
+                                , he completed everything i asked. Very
+                                professional.
+                            </p>
+                        </div>
+                    </a>
+                    <a
+                        href="https://www.fiverr.com/mrsajid4522?up_rollout=true"
+                        class="flex client_review box gap-1 item-center text-left"
                         target="_blank"
                     >
                         <img
@@ -449,9 +480,33 @@
                                 </div>
                             </div>
                             <p>
-                                Very happy with the work provided! Fast delivery
-                                , he completed everything i asked. Very
-                                professional.
+                                Worked again with mrsajid. Very Happy of the
+                                work provided Reccomended !
+                            </p>
+                        </div>
+                    </a>
+                    <a
+                        href="https://www.fiverr.com/mrsajid4522?up_rollout=true"
+                        class="flex client_review box gap-1 item-center text-left"
+                        target="_blank"
+                    >
+                        <img
+                            class="rounded-full mx-auto"
+                            src="images/stefan.jpg"
+                            alt=""
+                            width="70px"
+                            height="70px"
+                        />
+                        <div class="">
+                            <div class="flex space-between item-center">
+                                <span class="text-white">Stefanescuf</span>
+                                <div class="rating main-color small-font">
+                                    &starf; &starf; &starf; &starf; &starf;
+                                </div>
+                            </div>
+                            <p>
+                                Another complete job from mrsajid. Very
+                                satisfied with the work provided !
                             </p>
                         </div>
                     </a>
