--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     </section>
     <!-- ***************** SKILLS -->
     <section class="text-gray-400 bg-gray-12000 body-font">
-      <div class="container lg:px-56 py-24 mx-auto flex flex-wrap">
+      <div class="container lg:px-8 xl:px-24 md:px-4 py-24 mx-auto flex flex-wrap">
         <div class="flex flex-wrap w-full">
           <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
             <div class="flex relative pb-6">
@@ -386,7 +386,7 @@
     </section>
     <!-- ***************** TESTIMONIALS -->
     <section class="text-gray-400 bg-gray-12000 body-font">
-      <div class="container lg:px-56 py-24 mx-auto">
+      <div class="container lg:px-8 xl:px-24 md:px-4 py-24 mx-auto">
         <h2
           class="text-3xl font-medium title-font text-white mb-12 text-center"
         >
@@ -514,7 +514,7 @@
     </section>
     <!-- ***************** FEATURES/SERVICES -->
     <section class="text-gray-400 bg-gray-12000 body-font">
-      <div class="container lg:px-56 py-24 mx-auto">
+      <div class="container lg:px-8 xl:px-24 md:px-4 py-24 mx-auto">
         <h2
           class="sm:text-3xl text-2xl font-medium title-font text-center text-white mb-20"
         >
@@ -644,7 +644,7 @@
     <!-- ***************** CONTACT ME -->
     <section class="text-gray-400 bg-gray-12000 body-font relative">
       <div
-        class="container lg:px-56 py-24 mx-auto flex sm:flex-nowrap flex-wrap"
+        class="container lg:px-8 xl:px-24 md:px-4 py-24 mx-auto flex sm:flex-nowrap flex-wrap"
       >
         <div
           class="lg:w-2/3 md:w-1/2 bg-gray-12000 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative"
@@ -756,7 +756,7 @@
     <!-- ***************** FOOTER -->
     <footer class="text-gray-400 bg-gray-12000 body-font">
       <div
-        class="container lg:px-56 py-8 mx-auto flex items-center sm:flex-row flex-col"
+        class="container lg:px-8 xl:px-24 md:px-4 py-8 mx-auto flex items-center sm:flex-row flex-col"
       >
         <a
           class="flex title-font font-medium items-center md:justify-start justify-center text-white"
